# gemini-rag-ragas-eval

./: .env  README.md  main.ipynb  main.py  pyproject.toml
